pickup address slider and truncate issue complete

--- a/dev/css/more.css
+++ b/dev/css/more.css
@@ -127,11 +127,12 @@
     bottom: 0;
     left: 0;
     background-color: white;
+    overflow: scroll;
 }
 
 .addresspickerDiv{
     float: left;
-    margin: 17px;
+    margin-left: 9px;
     margin-top: 64px;
     padding: 10px;
     width: 126px;
@@ -139,28 +140,35 @@
     border-radius: 5px;
     border: solid 1px rgba(0, 0, 0, 0.2);
 }
-
+.inlineElements{
+  display: inline-flex;
+}
 .addresspickerDiv.selected{
     border: solid 1px #00acc1;
+    position: relative;
 }
 
 .addressText{
-    font-weight: bold;
+    font-weight: 500;
+    font-size: 12px;
 }
 .addresspickerDiv.selected .selectedText{
     display: inherit;
     font-size: 12px;
     font-weight: bold;
     color: #00acc1;
-    text-align: center;
     padding: 5px;
+    position: absolute;
+    bottom: 0;
+    left: 31px;
+
 }
 .addresspickerDiv .selectedText{
   display: none;
 }
 .selectadd{
-    position: absolute;
-    top: 11px;
+    position: fixed;
+    margin-top: 11px;
     left: 8px;
     font-weight: 500;
     color: black;
@@ -168,8 +176,8 @@
 }
 
 .addnewadd{
-    position: absolute;
-    top: 11px;
+    position: fixed;
+    margin-top: 11px;
     right: 9px;
     font-weight: 500;
     color: #00acc1;
@@ -178,10 +186,7 @@
 
  .profile-info{
   width: 100%;
-  perspective: 300px;
-  perspective-origin: 50% 60%;
-  display: flex;
-    overflow: scroll;
+  overflow: scroll;
 
 } 
 
@@ -306,4 +311,12 @@ ul.inline-list li {
     float: left;
     margin-left: 5%;
     margin-top: 20px;
+}
+.filter-title{
+    height: 100%;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    padding-right: 0px!important;
 }
